--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -90,7 +90,8 @@ a:active {
     right: 0;
     left: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.1);
+    pointer-events: none;
 }
 
 #background_video {
